--- a/contracts/Scarb.toml
+++ b/contracts/Scarb.toml
@@ -1,7 +1,7 @@
 [package]
 name = "grimblock"
 version = "0.0.0"
-cairo-version = "^2.13"
+cairo-version = "2.13.1"
 edition = "2024_07"
 
 [scripts]
